# pinecone-workshop

./: .gitignore  README.md
aws/RAG/03_Data-Pipeline/: 03_Data-Loading-RAG.ipynb  README.md
aws/RAG/04_Data-Query/: 04_Data-Query-RAG.ipynb  README.md
aws/RAG/05_Cleanup/: 05_Cleanup.ipynb  README.md
data/: README.md  data_pipeline.py  pyproject.toml  set_shell.sh
data/jsonl/: cnn_articles_business.jsonl  cnn_articles_entertainment.jsonl  cnn_articles_health.jsonl  cnn_articles_politics.jsonl  cnn_articles_sports.jsonl  cnn_articles_style.jsonl  cnn_articles_travel.jsonl  cnn_articles_us.jsonl  cnn_articles_world.jsonl
use_cases/Image_Search/02_Pinecone-Refresher/: README.md
use_cases/RAG/01_Intro/: README.md
use_cases/RAG/03_Setup/: README.md
use_cases/RAG/04_Data-Pipeline/: README.md
use_cases/RAG/05_Data-Query/: 05_Data-Query-RAG.ipynb  data_query.py  main.py  pyproject.toml
use_cases/RAG/05_Data-Query/static/: index.html
use_cases/RAG/06_Pinecone-Features/: README.md
use_cases/RAG/07_Cleanup/: README.md
utils/: README.md
